# tools

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  README.md  README.rst  conftest.py  pyproject.toml
.github/: codecov.yml  pull_request_template.md
.github/workflows/: lint.yaml  publish.yaml  pytest.yaml
doc/: Makefile  adb.rst  api.in  ato.rst  cli.rst  conf.py  config.rst  dev.rst  estat.rst  giz.rst  iamc.rst  index.rst  ipcc.rst  iso.rst  itdp.rst  jrc.rst  oica.rst  org.rst  proto.rst  registry.rst  report.rst  roadmap.rst  standards.rst  store.rst  testing.rst  tests.rst  usage.rst  util.rst  whatsnew.rst
doc/_static/css/: custom.css
doc/_template/autosummary/: class.rst  module.rst
doc/howto/: cli-edit.rst  data-csv.rst  get-involved.rst  index.rst  metadata.rst  portal.rst
transport_data/: __init__.py  cli.py  config.py  registry.py  report.py  store.py  testing.py
transport_data/adb/: __init__.py  cli.py
transport_data/ato/: __init__.py  cli.py
transport_data/cli/: __init__.py  check_file.py  check_record.py  interactive.py
transport_data/data/org/: template-metadata-0.html
transport_data/data/template/: metadata-2.rst  metadata-attribute-0.rst  metadata-set-0.rst  metadata-set-1.rst  metadata-set-2.html  odt-styles.xml
transport_data/data/tests/: iamc.csv  metadata-input.xlsx  read-csv-0.csv  read-csv-1.csv  read-csv-2.xlsx  zenodo-14913730.json  zenodo-15232577.json
transport_data/data/tests/ckan/: package.json  user.json
transport_data/data/tests/itdp/: rtdb.xlsx
transport_data/estat/: __init__.py
transport_data/iamc/: __init__.py  cli.py  make.py
transport_data/ipcc/: __init__.py  structure.py
transport_data/iso/: __init__.py  cli.py
transport_data/itdp/: __init__.py  cli.py  rtdb.py
transport_data/jrc/: __init__.py  cli.py
transport_data/oica/: __init__.py  cli.py  registry.json  registry.txt
transport_data/org/: __init__.py  ckan.py  cli.py  metadata.py
transport_data/org/metadata/: __init__.py  report.py  spreadsheet.py
transport_data/other/: __init__.py
transport_data/proto/: __init__.py  cli.py
transport_data/sum4all/: __init__.py  structure.py
transport_data/testing/: __init__.py  cli.py
transport_data/tests/: __init__.py  conftest.py  test_adb.py  test_ato.py  test_cli.py  test_config.py  test_estat.py  test_iamc.py  test_ipcc.py  test_iso.py  test_itdp.py  test_jrc.py  test_oica.py  test_org.py  test_registry.py  test_store.py  test_sum4all.py  test_util.py
transport_data/tests/org/: test_ckan.py  test_cli.py  test_metadata.py
transport_data/tests/util/: test_ckan.py  test_pluggy.py  test_pycountry.py  test_sdmx.py
transport_data/util/: __init__.py  ckan.py  click.py  docutils.py  google.py  hooks.py  jinja2.py  libreoffice.py  pluggy.py  pooch.py  pycountry.py  responses.py  sdmx.py
