[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
name = "transport-data"
description = "Tools for the Transport Data Commons"
authors = [{ name = "Transport Data Commons Initiative (TDCI)" }]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "click",
  "docutils",
  "dsss[git-store] >= 1.3.0",
  "Jinja2",
  "openpyxl",
  "packaging",
  "pandas",
  "platformdirs",
  "pluggy",
  "pooch",
  "prompt-toolkit",
  "pycountry",
  "requests",
  "sdmx1 >= 2.9",
]

[project.optional-dependencies]
docs = ["Sphinx", "sphinx-autorun", "sphinx-book-theme"]
tests = ["pytest", "pytest-cov", "pytest-rerunfailures", "pytest-xdist"]

[project.urls]
homepage = "https://transport-data.org"
repository = "https://github.com/transport-data/tools"

[project.scripts]
tdc = "transport_data.cli:main"

[tool.coverage.report]
exclude_also = [
  # Imports only used by type checkers
  "if TYPE_CHECKING:",
  # Abstract methods
  '\.\.\.',
  "raise NotImplementedError",
]

[[tool.mypy.overrides]]
module = ["pooch", "pycountry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
  -m "not network"
  --cov=transport_data --cov-report="""
markers = ["network: tests that perform network requests"]
usefixtures = "tmp_store"

[tool.ruff.lint]
select = ["C9", "E", "F", "I", "W"]
ignore = ["E501", "W191"]
mccabe.max-complexity = 10

[tool.setuptools_scm]
