[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning"]

[project]
dynamic = ["version"]
name = "transport-data"
description = "Tools for the Transport Data Commons"
authors = [{ name = "Transport Data Commons Initiative (TDCI)" }]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "ckanapi",
  "click",
  "docutils",
  "dsss[git-store] >= 1.3.0",
  "Jinja2",
  "openpyxl",
  "packaging",
  "pandas",
  "platformdirs",
  "pluggy",
  "pooch",
  "prompt-toolkit",
  "pycountry",
  "requests",
  "sdmx1 >= 2.9",
  "tqdm",
]

[project.optional-dependencies]
docs = ["furo", "Sphinx", "sphinx-autorun"]
google = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]
tests = [
  "pytest",
  "pytest-cov",
  "pytest-rerunfailures",
  "pytest-timeout",
  "pytest-xdist",
  "transport-data[google]",
]

[project.urls]
homepage = "https://transport-data.org"
repository = "https://github.com/transport-data/tools"

[project.scripts]
tdc = "transport_data.cli:main"

[tool.coverage.report]
exclude_also = [
  # Imports only used by type checkers
  "if TYPE_CHECKING:",
  # Abstract methods
  '\.\.\.',
  "raise NotImplementedError",
]

[tool.hatch]
version.source = "uv-dynamic-versioning"

[tool.mypy]
exclude = ["build/"]

[[tool.mypy.overrides]]
module = [
  "ckanapi.*",
  "google_auth_oauthlib.*",
  "google.*",
  "googleapiclient.*",
  "pooch.*",
  "pycountry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
  -m "not network"
  --cov=transport_data --cov-report="""
markers = ["network: tests that perform network requests"]
usefixtures = "tmp_store"

[tool.ruff.lint]
select = ["C9", "E", "F", "I", "W"]
ignore = ["E501", "W191"]
mccabe.max-complexity = 10
