[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning"]

[project]
dynamic = ["version"]
name = "transport-data"
description = "Tools for the Transport Data Commons"
authors = [{ name = "Transport Data Commons Initiative (TDCI)" }]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
  "ckanapi",
  "click",
  "docutils",
  "dsss[git-store] >= 1.3.0",
  "Jinja2",
  "keyring",
  "openpyxl",
  "packaging",
  "pandas",
  "platformdirs",
  "pluggy",
  "pooch",
  "prompt-toolkit",
  "pycountry",
  "requests",
  "sdmx1 >= 2.9",
  "tqdm",
]

[project.optional-dependencies]
docs = ["furo", "Sphinx", "sphinx-autorun"]
google = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]
keyring = ["keyring"]
tests = [
  'keyrings.alt; sys_platform=="linux"',
  "pytest",
  "pytest-cov",
  "pytest-rerunfailures",
  "pytest-timeout",
  "pytest-xdist",
  "transport-data[keyring,google]",
]

[project.urls]
Documentation = "https://docs.transport-data.org"
Changelog = "https://docs.transport-data.org/en/stable/whatsnew.html"
Repository = "https://github.com/transport-data/tools"
Issues = "https://github.com/transport-data/tools/issues"

[project.scripts]
tdc = "transport_data.cli:main"

[tool.coverage.report]
exclude_also = [
  # Imports only used by type checkers
  "if TYPE_CHECKING:",
  # Abstract methods
  '\.\.\.',
  "raise NotImplementedError",
]

[tool.hatch]
version.source = "uv-dynamic-versioning"

[tool.mypy]
files = ["doc", "transport_data"]

[[tool.mypy.overrides]]
module = [
  "ckanapi.*",
  "google_auth_oauthlib.*",
  "google.*",
  "googleapiclient.*",
  "pooch.*",
  "pycountry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
  -m "not network"
  --cov=transport_data --cov-report="""
markers = [
  "network: tests that perform network requests",
  "ckan_dev: tests that access the TDC dev CKAN instance",
]
usefixtures = "tmp_store"

[tool.ruff.lint]
select = ["C9", "E", "F", "I", "W"]
ignore = ["E501", "W191"]
mccabe.max-complexity = 10
